--- a/SAEW/src/main/webapp/css/avaliacoes.css
+++ b/SAEW/src/main/webapp/css/avaliacoes.css
@@ -26,13 +26,12 @@ body{
 	position:absolute;
 	top:42px;
 	/*left:1070px;*/
-	right:53px;
+	right:50px;
 	height:0px;
 	transition:0.9s;
 	overflow:hidden;
 	box-shadow:0px 5px 8px #eeeeee;
 	display:flex;
-
 }
 
 .cortina-sub{
@@ -41,11 +40,19 @@ body{
 	padding:15px;
 	background-color:#fbfbfb;
 	/*box-shadow:0px 0px 15px red;*/
+    border-top:2px solid #5d6d7e;
 }
 
 .cortina-item{
 	display:flex;
 	flex-direction:row;
+	/*align-items:center;*/
+}
+
+.imagi-cont i{
+	margin-top: 5px;
+	margin-left: 4px;
+	margin-right: 10px;
 }
 
 .cortina-item .image{
@@ -149,6 +156,7 @@ body{
 	padding:15px;
 	background-color:#fbfbfb;
 	/*box-shadow:0px 0px 15px red;*/
+	border-top:2px solid #5d6d7e;
 }
 
 /**/
@@ -167,7 +175,7 @@ body{
 }
 
 .nav-logo h1{
-	color:white;
+	color:black;
 }
 
 .nav-item ul{
@@ -184,13 +192,13 @@ body{
 }
 
 .nav-item ul li a{
-	color:white;
+	color:black;;
 	font-weight:500;
 }
 
 .nav-item ul li i{
 	padding-left:4px;
-	color:white;
+	color:black;
 }
 
 /*ESTILIZANDO CORPO*/
