--- a/SAEW/src/main/webapp/css/indexa.css
+++ b/SAEW/src/main/webapp/css/indexa.css
@@ -11,9 +11,9 @@
 }
 
 body{
-	background-image:url("../img/login.png");
-	background-color:#5d6d7e;
-	/*background-size:cover;*/
+	background-image:url("../img/fundo.png");
+	/*background-color:#5d6d7e;*/
+	background-size:cover;
 }
 
 .parent{
@@ -22,7 +22,6 @@ body{
 	display:flex;
 	justify-content:center;
 	align-items:center;
-	/*background-color:yellow;*/
 }
 
 .login-label{
@@ -38,8 +37,11 @@ body{
 	padding:0px 40px;
 	padding-bottom:45px;
 	padding-top:30px;
-	border:0.1px solid #ECECEC;
-	box-shadow:0px 5px 8px #eeeeee;
+	border:1px solid #ECECEC;
+}
+
+form{
+	box-shadow:0px 0px 8px #353535;
 }
 
 .login-logo{
@@ -59,7 +61,6 @@ body{
 	font-size:16.5px;
 	padding:9px;
 	width:100%;
-	/*border:1px solid #BBBBBB;*/
 	font-family:Verdana, Geneva, Tahoma, sans-serif;
 	border-radius:3px;
 	border:1px solid #3B81C7;
@@ -109,6 +110,12 @@ body{
 	color:white;
 	cursor:pointer;
 	border-radius:3px;
+	transition:1s;
+}
+
+.login-submit input:hover{
+	background-color:#70849a;
+	transition:1s;
 }
 
 .login-submit{
@@ -118,7 +125,6 @@ body{
 .login-copy p{
 	font-size:14.2px;
 	color:#515151;
-	text-align:center;/**/
 }
 
 .login-copy a{
