--- a/SAEW/src/main/webapp/css/menu.css
+++ b/SAEW/src/main/webapp/css/menu.css
@@ -12,7 +12,119 @@
 
 body{
 	background-color:#eeeeee;
+	position:relative;
 }
+
+/*CORTINA*/
+.cortina-parent{
+	display:flex;
+	flex-direction:row;
+	justify-content:end;
+}
+.cortina{
+	position:absolute;
+	top:42px;
+	right:50px;
+	height:0px;
+	transition:0.9s;
+	overflow:hidden;
+	box-shadow:0px 5px 8px #eeeeee;
+	display:flex;
+}
+
+.cortina-sub{
+	width:245px;
+	height:240px;
+	padding:15px;
+	background-color:#fbfbfb;
+    border-top:2px solid #5d6d7e;
+}
+
+.cortina-item{
+	display:flex;
+	flex-direction:row;
+}
+
+.imagi-cont i{
+	margin-top: 5px;
+	margin-left: 4px;
+	margin-right: 10px;
+}
+
+.cortina-item .image{
+	width:40px;
+	height:40px;
+	background-color:#f4f4f4;
+	border-radius:50%;
+}
+
+.cortina-item .info{
+	display:flex;
+	flex-direction:column;
+	margin-left:10px;
+}
+
+.info .perfil{
+	font-size:14px;
+}
+
+.info{
+	margin-bottom:12px;
+}
+
+.info label{
+	color:#3f444a;
+}
+
+.cortina-barra{
+	height:1px;
+	background-color:#e4e4e4;
+	margin:5px 0px;
+	margin-bottom:12px;
+}
+
+.cortina-down{
+	display:flex;
+	flex-direction:row;
+	margin-bottom:10px;
+	align-items:center;
+}
+
+.cortina-down i{
+	font-size:18px;
+	padding:3px;
+	color:#3f444a;
+}
+
+.image-item{
+	display:flex;
+	flex-direction:row;
+	width:45px;
+}
+
+
+/*CORTINA-03*/
+.cortina-03{
+	position:absolute;
+	top:42px;
+	right:160px;
+	height:0px;
+	transition:0.8s;
+	overflow:hidden;
+	box-shadow:0px 5px 8px #eeeeee;
+	display:flex;
+}
+
+.cortina-sub-03{
+	width:270px;
+	height:170px;
+	padding:15px;
+	background-color:#fbfbfb;
+	border-top:2px solid #5d6d7e;
+}
+
+/*FIM CORTINA*/
+
 
 
 /*ESTILIZANDO O MENU*/
@@ -43,6 +155,7 @@ body{
 
 .nav-item ul li a{
 	color:black;
+	font-weight:500;
 }
 
 .nav-item ul li i{
