--- a/SAEW/src/main/webapp/css/recupera.css
+++ b/SAEW/src/main/webapp/css/recupera.css
@@ -11,8 +11,8 @@
 }
 
 body{
-	/*background-image:url("../img/sae_fundo.png");
-	background-size:cover;*/
+	background-image:url("../img/sae_fundo.png");
+	background-size:cover;
 	background-color:#5d6d7e;
 }
 
