--- a/SAEW/src/main/webapp/css/diagnostico_consult.css
+++ b/SAEW/src/main/webapp/css/diagnostico_consult.css
@@ -369,7 +369,7 @@ table thead td:nth-child(6), table thead td:nth-child(7){
 }
 
 table tbody td:nth-child(3){
-	width:460px;
+	width:430px;
 }
 
 table tbody td:nth-child(6) i:nth-child(1){
@@ -397,8 +397,11 @@ table tbody td:nth-child(7) i:nth-child(1){
 	display:flex;
 	flex-direction:row;
 	justify-content:space-between;
+	height:50px;
 	align-items:center;
 	padding-bottom:10px;
+	box-shadow:0px 1px 3px #eeeeee;
+	/*border-bottom:0.3px solid #eeeeee;*/
 }
 
 .pesquisa{
@@ -423,11 +426,6 @@ table tbody td:nth-child(7) i:nth-child(1){
 	width:100%;
 }
 
-.filtro{
-	height:50px;
-	align-items:center;
-}
-
 .filter-icon {
 	margin-right:10px;
 }
@@ -449,6 +447,7 @@ table tbody td:nth-child(7) i:nth-child(1){
 .avaliacao-footer{
 	height:50px;
 	align-items:center;
+	border-top:0.5px solid #eeeeee;
 }
 
 .avaliacao-footer, .ordem-mostra{
